added basic autocomplete layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
+<app-places-search-autocomplete
+  class="places-autocomplete"
+></app-places-search-autocomplete>
 <app-map [points]="parkingLots$"></app-map>
