--- a/src/app/parkinglot-details/parkinglot-details.component.html
+++ b/src/app/parkinglot-details/parkinglot-details.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="parkingLot">
+<ng-container class="container" *ngIf="parkingLot">
   <div class="parking-title">{{ parkingLot.name }}</div>
   <div class="parking-details">
     <div>
