added more linting and fixes some

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<app-places-search-autocomplete
-  class="places-autocomplete"
-></app-places-search-autocomplete>
+<app-places-search-autocomplete class="places-autocomplete"></app-places-search-autocomplete>
 <app-map [points]="parkingLots$"></app-map>
