--- a/src/app/parkinglot-status/parkinglot-status.component.html
+++ b/src/app/parkinglot-status/parkinglot-status.component.html
@@ -1,3 +1,1 @@
-<span class="status" [ngStyle]="{ color: statusColor }">{{
-  statusDisplayName
-}}</span>
+<span class="status" [ngStyle]="{ color: statusColor }">{{ statusDisplayName }}</span>
