--- a/src/app/parkinglot-details/parkinglot-details.component.html
+++ b/src/app/parkinglot-details/parkinglot-details.component.html
@@ -1,35 +1,29 @@
 <ng-container class="container" *ngIf="parkingLot">
-  <div class="parking-title">{{ parkingLot.name }}</div>
-  <div class="parking-details">
-    <div>
-      <span class="detail-title">סטטוס: </span>
-      <span
-        ><app-parkinglot-status
-          [status]="parkingLot.status"
-        ></app-parkinglot-status
-      ></span>
-    </div>
-    <div>
-      <span class="detail-title">עודכן לאחרונה ב: </span>
-      <span>{{ parkingLot.lastUpdateTime }}</span>
-    </div>
-  </div>
-  <div class="parking-actions">
-    <a
-      mat-flat-button
-      color="primary"
-      class="action"
-      href="{{ parkingLot.url }}"
-      >אתר החניון<mat-icon>language</mat-icon></a
-    >
-    <a
-      mat-flat-button
-      class="action btn-navigate"
-      href="https://waze.com/ul?ll={{ parkingLot.location.coordinates[0] }}%2C{{
-        parkingLot.location.coordinates[1]
-      }}&navigate=yes"
-    >
-      נווט לחניון <mat-icon svgIcon="waze"></mat-icon>
-    </a>
-  </div>
+	<div class="parking-title">{{ parkingLot.name }}</div>
+	<div class="parking-details">
+		<div>
+			<span class="detail-title">סטטוס:</span>
+			<span><app-parkinglot-status [status]="parkingLot.status"></app-parkinglot-status></span>
+		</div>
+		<div>
+			<span class="detail-title">עודכן לאחרונה ב:</span>
+			<span>{{ parkingLot.lastUpdateTime }}</span>
+		</div>
+	</div>
+	<div class="parking-actions">
+		<a mat-flat-button color="primary" class="action" href="{{ parkingLot.url }}">
+			אתר החניון
+			<mat-icon>language</mat-icon>
+		</a>
+		<a
+			mat-flat-button
+			class="action btn-navigate"
+			href="https://waze.com/ul?ll={{ parkingLot.location.coordinates[0] }}%2C{{
+				parkingLot.location.coordinates[1]
+			}}&navigate=yes"
+		>
+			נווט לחניון
+			<mat-icon svgIcon="waze"></mat-icon>
+		</a>
+	</div>
 </ng-container>
