--- a/src/app/places-search-autocomplete/places-search-autocomplete.component.html
+++ b/src/app/places-search-autocomplete/places-search-autocomplete.component.html
@@ -1,28 +1,17 @@
 <mat-autocomplete #auto="matAutocomplete" [displayWith]="getDisplayOption">
-  <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-    {{ option.displayName }}
-  </mat-option>
+	<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+		{{ option.displayName }}
+	</mat-option>
 </mat-autocomplete>
 <div class="search-container">
-  <mat-form-field class="search-input" appearance="outline">
-    <mat-label>Search Google Maps</mat-label>
-    <input
-      matInput
-      type="text"
-      [formControl]="placeControl"
-      [matAutocomplete]="auto"
-    />
-    <button
-      *ngIf="placeControl.value"
-      matSuffix
-      mat-icon-button
-      aria-label="Clear"
-      (click)="placeControl.setValue('')"
-    >
-      <mat-icon>close</mat-icon>
-    </button>
-    <button class="search-button" matSuffix mat-icon-button aria-label="Search">
-      <mat-icon>search</mat-icon>
-    </button>
-  </mat-form-field>
+	<mat-form-field class="search-input" appearance="outline">
+		<mat-label>Search Google Maps</mat-label>
+		<input matInput type="text" [formControl]="placeControl" [matAutocomplete]="auto" />
+		<button *ngIf="placeControl.value" matSuffix mat-icon-button aria-label="Clear" (click)="placeControl.setValue('')">
+			<mat-icon>close</mat-icon>
+		</button>
+		<button class="search-button" matSuffix mat-icon-button aria-label="Search">
+			<mat-icon>search</mat-icon>
+		</button>
+	</mat-form-field>
 </div>
